test/spec_vectors/unreached-invalid/fail/module_39.wat
(module (func $type-block-value-num-vs-void-after-unreachable (block (unreachable) (i32.const 1))))